feat: enable C++ exceptions and configure Link for ESP32
- Define LINK_ESP_TASK_CORE_ID=1 for ESP32 platform (run Link tasks on core 1)
- Suppress -Wreturn-type warnings for Link code (ASIO_NO_EXCEPTIONS compatibility)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,15 @@ target_include_directories(${COMPONENT_LIB} PRIVATE
 
 # ESP_PLATFORM is automatically defined by ESP-IDF, which Link uses to detect ESP32
 # No need for LINK_PLATFORM_LINUX - Link has native ESP32 support
+
+# Define required ESP32 platform configuration for Ableton Link
+# LINK_ESP_TASK_CORE_ID: Which core to run Link tasks on (0 or 1, use 1 to avoid WiFi core)
+target_compile_definitions(${COMPONENT_LIB} PRIVATE
+    LINK_ESP_TASK_CORE_ID=1
+)
+
+# Suppress return-type warnings for Link code (ASIO_NO_EXCEPTIONS causes unreachable code paths)
+# Link doesn't fully support no-exceptions mode
+target_compile_options(${COMPONENT_LIB} PRIVATE
+    -Wno-return-type
+)
