feat: add safe Rust wrapper for Ableton Link
- Add safe Rust wrapper API in src/lib.rs with Link struct
- Add C stub implementations for missing newlib functions:
  - Wide character functions (wmemcpy, wcslen, wctype, etc.)
  - String conversion functions (strtof, strtod, sscanf)
  - Locale functions (strxfrm, strftime, wcsxfrm, wcsftime)
- Update firmware to use safe wrapper API instead of raw FFI
- The safe wrapper provides: new(), enable(), tempo(), set_tempo(),
  beat_at_time(), phase_at_time(), clock_micros(), and Drop

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,18 @@
 [package]
-name = "ableton-link-sys"
+name = "esp-idf-ableton-link"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
+description = "Safe Rust wrapper for Ableton Link on ESP32 via ESP-IDF"
+keywords = ["esp32", "esp-idf", "ableton", "link", "music"]
+categories = ["embedded", "hardware-support"]
 
 [dependencies]
-esp-idf-svc = "0.51"
+esp-idf-sys = "0.36"
+log = "0.4"
+
+[features]
+default = []
+std = []
+
