fix: make things link properly
- Move esp-idf-sys extra_components config to esp-idf-ableton-link crate
- Fix linker order issue (add -lc after -lstdc++ in CMakeLists.txt)
- Remove C function stubs from link_wrapper.cpp (no longer needed)
- Add -fexceptions and use cxx_generalized_initializers for Link

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,9 @@ idf_component_register(
     PRIV_REQUIRES sock_utils esp_timer esp_driver_gptimer esp_netif
 )
 
-# C++11 is required for Ableton Link
-target_compile_features(${COMPONENT_LIB} PUBLIC cxx_std_11)
+# C++11 is required for Ableton Link - use specific feature like the official example
+# Using PRIVATE since only our wrapper needs C++11, not consumers
+target_compile_features(${COMPONENT_LIB} PRIVATE cxx_generalized_initializers)
 
 # Ableton Link include directories (internal, not exposed to consumers)
 target_include_directories(${COMPONENT_LIB} PRIVATE
@@ -24,6 +25,14 @@ target_compile_definitions(${COMPONENT_LIB} PRIVATE
 
 # Suppress return-type warnings for Link code (ASIO_NO_EXCEPTIONS causes unreachable code paths)
 # Link doesn't fully support no-exceptions mode
+# Add -fexceptions explicitly like the official ESP32 example
 target_compile_options(${COMPONENT_LIB} PRIVATE
     -Wno-return-type
+    -fexceptions
 )
+
+# Fix link order issue: libstdc++ needs libc symbols (wctype, wcslen, strtof, etc.)
+# but in ESP-IDF+Rust builds, -lc comes BEFORE -lstdc++. Since the linker only makes
+# one pass, symbols needed by stdc++ are not found. Adding "c" here ensures libc
+# appears again AFTER stdc++ in the link line.
+target_link_libraries(${COMPONENT_LIB} PRIVATE c)
