--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ log = "0.4"
 default = []
 std = []
 
+[build-dependencies]
+glob = "0.3"
+
 [package.metadata.esp-idf-sys]
 extra_components = [
     { component_dirs = ["../esp-idf-ableton-link"], bindings_header = "../esp-idf-ableton-link/include/link_wrapper.h", bindings_module = "ableton_link" },
