--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,14 +22,16 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container:
-      image: espressif/idf-rust:esp32_latest
-      options: --user root
-    env:
-      HOME: /home/esp
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Setup Xtensa Rust toolchain
+        uses: esp-rs/xtensa-toolchain@v1.6
+        with:
+          default: true
+          buildtargets: esp32
+          ldproxy: true
 
       - name: Cache Rust
         uses: Swatinem/rust-cache@v2
@@ -40,7 +42,6 @@ jobs:
           ESP_IDF_SYS_ROOT_CRATE: esp-idf-ableton-link
           ESP_IDF_SDKCONFIG_DEFAULTS: sdkconfig.defaults.documentation
         run: |
-          . /home/esp/export-esp.sh
           cargo doc --target xtensa-esp32-espidf -Zbuild-std=std
           # Add redirect index.html to the crate's documentation
           echo '<meta http-equiv="refresh" content="0; url=esp_idf_ableton_link/index.html">' > target/xtensa-esp32-espidf/doc/index.html
